--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-hook-form": "^7.60.0",
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.3"
+    "react-router": "^7.6.3",
+    "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
