--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "i18next": "^25.3.2",
     "i18next-http-backend": "^3.0.2",
+    "jest": "^30.0.4",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
